# STACHE

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run-repomix.sh  run_policy_map.sh
config/: optuna_study.db  optuna_study_old_backup.db  training_config.yml  training_config_A2C.yml  training_config_PPO.yml  training_config_env.yml
data/logs/: logs_MiniGrid-Empty-5x5-v0_PPO_model_20250204_015716.txt  logs_MiniGrid-Empty-8x8-v0_A2C_model_20250203_202114.txt  logs_MiniGrid-Empty-8x8-v0_PPO_model_20250203_192925.txt  logs_MiniGrid-Empty-8x8-v0_PPO_model_20250204_013400.txt  logs_MiniGrid-Empty-8x8-v0_PPO_model_20250204_020413.txt  logs_MiniGrid-Empty-Random-5x5-v0_PPO_model_20250204_020137.txt  logs_MiniGrid-Fetch-5x5-N2-v0_A2C_model_20250114_020209.txt  logs_MiniGrid-Fetch-5x5-N2-v0_A2C_model_20250114_020402.txt  logs_MiniGrid-Fetch-5x5-N2-v0_A2C_model_20250119_003307.txt  logs_MiniGrid-Fetch-5x5-N2-v0_None_model_20250114_015344.txt  logs_MiniGrid-Fetch-5x5-N2-v0_None_model_20250114_015735.txt  logs_MiniGrid-Fetch-5x5-N2-v0_PPO_model_20250203_223223.txt  logs_MiniGrid-Fetch-5x5-N2-v0_PPO_model_20250204_020836.txt  logs_MiniGrid-Fetch-5x5-N2-v0_PPO_model_20250210_205058.txt  logs_MiniGrid-Fetch-5x5-N2-v0_ppo_model_20250114_014037.txt  logs_MiniGrid-Fetch-6x6-N2-v0_ppo_model_20250113_021318.txt  training_logs_20250112_021059.txt
examples/: playground.py
experiments/20250223_021733/: log.txt
experiments/20250223_023924/: log.txt
experiments/20250223_024304/: log.txt
experiments/20250223_030806/: log.txt
experiments/20250223_030933/: config.yaml  log.txt
experiments/20250302_022146/: evaluations.npz  log.txt
scripts/: run_taxi_rr.sh
src/: __init__.py  bfs-rr.py  environment_utils.py  evaluate.py  hyperparameter_utils.py  minigrid_set_state.py  model_optimization.py  model_optimization2.py  model_optimization_multi.py  playground.py  set_state_extention.py  train.py  utils.py  wrappers.py
src/envs/: __init__.py  environment_utils.py
src/explainability/: __init__.py  evaluate.py  robust_taxi.py  rr_bfs.py  (+2 more)
src/utils/: utils.py  (+2 more)
tests/: conftest.py  test_evaluate.py  test_robustness_region.py  test_set_state.py  test_taxi_robustness_region.py  test_utils.py  utils_test.py
(+86 files in other folders)
